[tool.poetry]
name = "cython-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.8"
easycython = "^1.0.7"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
